--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "author": "PAAS",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "bower": "^1.8.4",
     "lite-server": "^2.4.0"
   }
