--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/pboutet/.virtualenvs/cpsc532m_a1_py3.7.0/bin/python"
+    "python.pythonPath": "C:\\Anaconda3\\python.exe"
 }
