implemented all knowledge cards

--- a/src/data/knowledge.json
+++ b/src/data/knowledge.json
@@ -1,54 +1,105 @@
 {
     "content": [
         {
-            "id": 99,
+            "id": 10288,
             "title": "Vibrotactile Display: Perception, Technology, and Applications",
             "name": "Choi 2013.pdf",
             "type": "pdf",
             "author": "Seungmoon Choi and Katherine J. Kuchenbecker",
             "date": "6 Sep 2013",
-            "abstract": "This paper reviews the technology and applica- tions of vibrotactile display, an effective information transfer modality for the emerging area of haptic media. Our emphasis is on summarizing foundational knowledge in this area and providing implementation guidelines for application designers who do not yet have a background in haptics. Specifically, we explain the relevant human vibrotactile perceptual capabilities, detail the main types of commercial vibrotactile actuators, and describe how to build both monolithic and localized vibrotac- tile displays. We then identify exemplary vibrotactile display systems in application areas ranging from the presentation of physical object properties to broadcasting vibrotactile media content.",
+            "abstract": "This paper reviews the technology and applica- tions of vibrotactile display, an effective information transfer modality for the emerging area of haptic media. Our emphasis is on summarizing foundational knowledge in this area and providing implementation guidelines for application designers who do not yet have a background in haptics.",
             "image": "Choi_2013.png"
         },
         {
-            "id": 100,
+            "id": 10291,
             "title": "Harold’s Purple Crayon Rendered in Haptics: Large-Stroke, Handheld Ballpoint Force Feedback",
             "name": "magic pen paper.pdf",
             "type": "pdf",
             "author": "Soheil Kianzad and Karon E. MacLean",
             "date": "4 Mar 2018",
-            "abstract": "An elusive and audacious vision in haptics is the rendering of forces “in the large” – to feel sensations in large gestures, anywhere and anytime. The reality is that delivering force feedback in informal settings and diverse environments suffers from linked constraints. Producing force requires physical grounding, which limits workspace size; meanwhile, expansion impacts affordability and application versatility. Inspired by needs for haptic support of large motions on a surface in applications like embodied conceptual learning, commercial design, and 2D virtual / augmented reality, we present the ballpoint drive. This novel approach circumvents conventional constraints by imposing a new one: motion restricted to rolling on an arbitrary two dimensional surface, and grounding forces generated through friction. We analyze the ballpoint’s design considerations in the context of our framing applications, describe a first prototype and its performance, and assess its potential for further development.",
+            "abstract": "An elusive and audacious vision in haptics is the rendering of forces “in the large” – to feel sensations in large gestures, anywhere and anytime. The reality is that delivering force feedback in informal settings and diverse environments suffers from linked constraints. Producing force requires physical grounding, which limits workspace size; meanwhile, expansion impacts affordability and application versatility.",
             "image": "magic_pen.png"
         },
         {
-            "id": 101,
+            "id": 10292,
             "title": "Crafting Diversity in Radiology Image Stack Scrolling: Control and Annotations",
             "name": "Oram 2014.pdf",
             "type": "pdf",
             "author": "Louise Oram, Karon Maclean, Philippe Kruchten, Bruce Forster",
             "date": "21 Jun 2014",
-            "abstract": "To make a single diagnosis, today’s radiologists must examine thousands of images; yet little effort has been put into refining this time-consuming, repetitive task. Meanwhile, automatic or radiologist-generated annotations may impact how radiologists navigate image stacks as they review lesions of interest. Observation and/or interviews of 19 radiologists revealed that stack scrolling dominated the resulting task examples. We iteratively crafted and obtained radiologist feedback for a variety of prototypes, then evaluated their scrolling and annotation-review support for lay users. With a simplified stack seeded with correct / incorrect annotations, we compared the effect of four scrolling techniques (traditional scrollwheel and click-and-drag, plus sliding-touch, and tilt rate control) and visual vs. haptic annotation cues on scrolling dynamics, detection accuracy and subjective factors. Scrollwheel was fastest overall, and combined visual / haptic annotation cues sped target-finding relative to either modality alone. We share insights on integrating our findings into radiologist practice.",
+            "abstract": "To make a single diagnosis, today’s radiologists must examine thousands of images; yet little effort has been put into refining this time-consuming, repetitive task. Meanwhile, automatic or radiologist-generated annotations may impact how radiologists navigate image stacks as they review lesions of interest. Observation and/or interviews of 19 radiologists revealed that stack scrolling dominated the resulting task examples.",
             "image": "Oram_2014.png"
         },
         {
-            "id": 102,
+            "id": 10293,
             "title": "Representations and Algorithms for Force-Feedback Display",
             "name": "Otaduy.pdf",
             "type": "pdf",
             "author": "Miguel A. Otaduy, Carlos Garre, and Ming C. Lin",
             "date": "9 JSep 2013",
-            "abstract": "\"Haptic rendering\" or \"haptic display\" can be broadly defined as conveying information about virtual objects or data to a user through the sense of touch. Among all applications of haptic rendering, force-feedback display of contact interactions with rigid and deformable virtual models through the sense of touch has matured considerably over the last decade. In this paper, we present a general framework for force-feedback display of rigid and virtual environments, and we outline its major building blocks. We focus on computational aspects, and we classify algorithms and representations successfully used in the three major subproblems of force-feedback display: collision detection, dynamics simulation, and constrained optimization. In addition, force-feedback display is an integral part of a multimodal experience, often involving both visual and auditory display; therefore, we also discuss the choice of algorithms and representations for force feedback as a part of multimodal display.",
+            "abstract": "\"Haptic rendering\" or \"haptic display\" can be broadly defined as conveying information about virtual objects or data to a user through the sense of touch. Among all applications of haptic rendering, force-feedback display of contact interactions with rigid and deformable virtual models through the sense of touch has matured considerably over the last decade. In this paper, we present a general framework for force-feedback display of rigid and virtual environments, and we outline its major building blocks.",
             "image": "Otaduy.png"
         },
         {
-            "id": 103,
+            "id": 10294,
             "title": "Vibro-tactile feedback for VR systems",
             "name": "vibrotactile in VR.pdf",
             "type": "pdf",
             "author": "Gabor Sziebig, Bjorn Solvang, Csaba Kiss, and Peter Korondi",
             "date": "21 May 2009",
-            "abstract": "Imitation of senses and feedback from virtual reality environments always meant a great problem. Realization of two (sight and hearing) out of the five human senses is indispensable. Simulation of these two senses is not complex issue; on the contrary the other three are quite challenging. This paper describes the development of a vibro-tactile glove which can provide sensory feedback from a virtual environment, either as a stand alone system but most important in combination with sight and audio feedback systems. Instead of implementing real force feedback, the focus is on tactile sensing, as an alternative way of achieving the same feedback. The glove contains six vibration motors on different locations on the hand. These locations include all five fingers, and the palm. Communication with the glove is wireless, enabling free movement for the user. The system is low cost and very small sized which allows for combining it with advanced input devices like a motion capturing suit.",
+            "abstract": "Imitation of senses and feedback from virtual reality environments always meant a great problem. Realization of two (sight and hearing) out of the five human senses is indispensable. Simulation of these two senses is not complex issue; on the contrary the other three are quite challenging. This paper describes the development of a vibro-tactile glove which can provide sensory feedback from a virtual environment, either as a stand alone system but most important in combination with sight and audio feedback systems.",
             "image": "vibrotactile in vr.png"
+        },
+        {
+            "id": 10330,
+            "title": "Depressive symptoms among immigrant and Canadian born mothers of preterm infants at neonatal intensive care discharge: a cross sectional study",
+            "name": "Ballantyne 2013.pdf",
+            "type": "pdf",
+            "author": "Marilyn Ballantyne1, Karen M Benzies2, Barry Trute",
+            "date": "21 Sep 2013",
+            "abstract": "Mothers of preterm infants are considered at higher risk for depressive symptoms, higher than for mothers of healthy term infants. Predictors of depressive symptoms in mothers of preterm infants are not yet well established. Immigrant mothers of term infants have higher prevalence of depressive symptoms than Canadian born mothers but the relative prevalence for immigrant mothers of preterm infants is unknown. This study had two aims: (i) to investigate the prevalence of depressive symptoms in immigrant as compared to Canadian born mothers of preterm infants, and (ii) to determine what factors are associated with depressive symptoms in mothers of preterm infants.",
+            "image": ""
+        },
+        {
+            "id": 10331,
+            "title": "A workplace violence educational program: A repeated measures study",
+            "name": "Gordon 2014.pdf",
+            "type": "pdf",
+            "author": "Gordon L. Gillespie, Sharon L. Farra, Donna M. Gates",
+            "date": "30 Apr 2014",
+            "abstract": "Violence against healthcare employees is a profound problem in the emergency department worldwide. One strategy to reduce the risk of violence is prevention focused education. The purpose of this paper was to report the learning outcomes of a workplace violence educational prevention program tailored to the needs of emergency department employees. A quasi-experimental design was used to determine the knowledge retention of program content following a hybrid (online and classroom) educational intervention. One hundred twenty emergency department employees that completed the workplace violence prevention program participated in the study. A repeated-measures analysis of variance was conducted to determine if individual test scores increased significantly between baseline, posttest, and six month posttest periods. The results indicated a significant time effect, Wilk’s L 1⁄4 .390, F (2, 118) 1⁄4 26.554, p < .001, h2 1⁄4 .310. Follow-up polynomial contrasts indicated a significant linear effect with means increasing over time, F (1, 119) 1⁄4 53.454, p < .001, h2 1⁄4 .310, while individual test scores became significantly higher over time. It was concluded that the use of a hybrid modality increases the probability that significant learning outcomes and retention will be achieved.",
+            "image": ""
+        },
+        {
+            "id": 10332,
+            "title": "Factors That Influence the Development of Compassion Fatigue, Burnout, and Compassion Satisfaction in Emergency Department Nurses",
+            "name": "Hunsaker_et_al-2015.pdf",
+            "type": "pdf",
+            "author": "Stacie Hunsaker, Hsiu-Chin Chen, Dale Maughan, Sondra Heaston",
+            "date": "20 Oct 2014",
+            "abstract": "The purpose of this study was twofold: (a) to determine the prevalence of compassion satisfaction, compassion fatigue, and burnout in emergency department nurses throughout the United States and (b) to examine which demographic and work-related components affect the development of compassion satisfaction, compassion fatigue, and burnout in this nursing specialty. Improving recognition and awareness of compassion satisfaction, compassion fatigue, and burnout among emergency department nurses may prevent emotional exhaustion and help identify interventions that will help nurses remain empathetic and compassionate professionals.",
+            "image": ""
+        },
+        {
+            "id": 10337,
+            "title": "Gender differences in symptoms of myocardial ischaemia",
+            "name": "Mackay 2011.pdf",
+            "type": "pdf",
+            "author": "Martha H. Mackay, Pamela A. Ratner, Joy L. Johnson, Karin H. Humphries, and Christopher E. Buller",
+            "date": "14 Sep 2011",
+            "abstract": "Better understanding of symptoms of myocardial ischaemia is needed to improve timeliness of treatment for acute coronary syndromes (ACS). Although researchers have suggested sex differences exist in ischaemic symptoms, methodological issues prevent conclusions. Using percutaneous coronary intervention (PCI) balloon inflation as a model of myocardial ischaemia, we explored sex differences in reported symptoms of ischaemia.",
+            "image": ""
+        },
+        {
+            "id": 10338,
+            "title": "Health-related quality of life and psychological well-being in patients with benign prostatic hyperplasia",
+            "name": "Pinto_et_al-2015.pdf",
+            "type": "pdf",
+            "author": "Julian Dong Oh Pinto, Hong-Gu He, Sally Wai Chi Chan, Poh Choo Toh, Kesavan Esuvaranathan and Wenru Wang",
+            "date": "24 Apr 2014",
+            "abstract": "To examine the health-related quality of life and psychological well-being of patients with benign prostatic hyperplasia and identify the predictive factors of health-related quality of life. The health-related quality of life of patients with benign prostatic hyperplasia was poor, and their psychological well-being was severely affected.",
+            "image": ""
         }
+        
     ]
 }
