--- a/src/data/knowledge.json
+++ b/src/data/knowledge.json
@@ -1,9 +1,9 @@
 {
     "content": [
         {
-            "id": 10288,
+            "id": 10318,
             "title": "Vibrotactile Display: Perception, Technology, and Applications",
-            "name": "Choi 2013.pdf",
+            "name": "9374833.pdf",
             "type": "pdf",
             "author": "Seungmoon Choi and Katherine J. Kuchenbecker",
             "date": "6 Sep 2013",
@@ -11,9 +11,9 @@
             "image": "Choi_2013.png"
         },
         {
-            "id": 10291,
+            "id": 10317,
             "title": "Harold’s Purple Crayon Rendered in Haptics: Large-Stroke, Handheld Ballpoint Force Feedback",
-            "name": "magic pen paper.pdf",
+            "name": "82928327.pdf",
             "type": "pdf",
             "author": "Soheil Kianzad and Karon E. MacLean",
             "date": "4 Mar 2018",
@@ -21,9 +21,9 @@
             "image": "magic_pen.png"
         },
         {
-            "id": 10292,
+            "id": 10314,
             "title": "Crafting Diversity in Radiology Image Stack Scrolling: Control and Annotations",
-            "name": "Oram 2014.pdf",
+            "name": "82139339.pdf",
             "type": "pdf",
             "author": "Louise Oram, Karon Maclean, Philippe Kruchten, Bruce Forster",
             "date": "21 Jun 2014",
@@ -31,9 +31,9 @@
             "image": "Oram_2014.png"
         },
         {
-            "id": 10293,
+            "id": 10316,
             "title": "Representations and Algorithms for Force-Feedback Display",
-            "name": "Otaduy.pdf",
+            "name": "82873834.pdf",
             "type": "pdf",
             "author": "Miguel A. Otaduy, Carlos Garre, and Ming C. Lin",
             "date": "9 JSep 2013",
@@ -41,9 +41,9 @@
             "image": "Otaduy.png"
         },
         {
-            "id": 10294,
+            "id": 10313,
             "title": "Vibro-tactile feedback for VR systems",
-            "name": "vibrotactile in VR.pdf",
+            "name": "72763872.pdf",
             "type": "pdf",
             "author": "Gabor Sziebig, Bjorn Solvang, Csaba Kiss, and Peter Korondi",
             "date": "21 May 2009",
@@ -51,7 +51,7 @@
             "image": "vibrotactile in vr.png"
         },
         {
-            "id": 10330,
+            "id": 10354,
             "title": "Depressive symptoms among immigrant and Canadian born mothers of preterm infants at neonatal intensive care discharge: a cross sectional study",
             "name": "Ballantyne 2013.pdf",
             "type": "pdf",
@@ -61,7 +61,7 @@
             "image": ""
         },
         {
-            "id": 10331,
+            "id": 10355,
             "title": "A workplace violence educational program: A repeated measures study",
             "name": "Gordon 2014.pdf",
             "type": "pdf",
@@ -71,7 +71,7 @@
             "image": ""
         },
         {
-            "id": 10332,
+            "id": 10356,
             "title": "Factors That Influence the Development of Compassion Fatigue, Burnout, and Compassion Satisfaction in Emergency Department Nurses",
             "name": "Hunsaker_et_al-2015.pdf",
             "type": "pdf",
@@ -81,7 +81,7 @@
             "image": ""
         },
         {
-            "id": 10337,
+            "id": 10361,
             "title": "Gender differences in symptoms of myocardial ischaemia",
             "name": "Mackay 2011.pdf",
             "type": "pdf",
@@ -91,7 +91,7 @@
             "image": ""
         },
         {
-            "id": 10338,
+            "id": 10362,
             "title": "Health-related quality of life and psychological well-being in patients with benign prostatic hyperplasia",
             "name": "Pinto_et_al-2015.pdf",
             "type": "pdf",
@@ -101,7 +101,7 @@
             "image": ""
         },
         {
-            "id": 10291,
+            "id": 10378,
             "title": "Hipikat: A Project Memory for Software Development",
             "name": "01463229.pdf",
             "type": "pdf",
@@ -111,9 +111,9 @@
             "image": ""
         },
         {
-            "id": 10291,
+            "id": 10381,
             "title": "Struggles of New College Graduates in their First Software Development Job",
-            "name": "Begel 2008.pdf",
+            "name": "892838922.pdf",
             "type": "pdf",
             "author": "Andrew Begel and Beth Simon",
             "date": "12 Mar 2008",
@@ -121,9 +121,9 @@
             "image": ""
         },
         {
-            "id": 10291,
+            "id": 10380,
             "title": "Customized Awareness: Recommending Relevant External Change Events",
-            "name": "icse_2010_holmes.pdf",
+            "name": "8927055.pdf",
             "type": "pdf",
             "author": "Reid Holmes and Robert J. Walker",
             "date": "2 May 2012",
@@ -131,7 +131,7 @@
             "image": ""
         },
         {
-            "id": 10291,
+            "id": 10382,
             "title": "Why Good Developers Write Bad Code: An Observational Case Study of the Impacts of Organizational Factors on Software Quality",
             "name": "icse15lavallee.pdf",
             "type": "pdf",
@@ -141,9 +141,9 @@
             "image": ""
         },
         {
-            "id": 10291,
+            "id": 10379,
             "title": "Sourcerer: mining and searching internet-scale software repositories",
-            "name": "Linstead2009_Article_SourcererMiningAndSearchingInt.pdf",
+            "name": "12362712.pdf",
             "type": "pdf",
             "author": "Erik Linstead, Sushil Bajracharya, Trung Ngo, Paul Rigor, Cristina Lopes, Pierre Baldi",
             "date": "16 Sep 2007",
@@ -151,7 +151,7 @@
             "image": ""
         },
         {
-            "id": 10338,
+            "id": 10306,
             "title": "Geography of British Columbia",
             "name": "geography1.pdf",
             "type": "pdf",
@@ -161,7 +161,7 @@
             "image": "BC_mountains.png"
         },
         {
-            "id": 10338,
+            "id": 10307,
             "title": "Great Lakes",
             "name": "geography2.pdf",
             "type": "pdf",
@@ -171,7 +171,7 @@
             "image": "Great_Lakes.png"
         },
         {
-            "id": 10338,
+            "id": 10308,
             "title": "Geography of Africa",
             "name": "geography3.pdf",
             "type": "pdf",
@@ -181,7 +181,7 @@
             "image": "africa_geography.png"
         },
         {
-            "id": 10338,
+            "id": 10309,
             "title": "Volcanos",
             "name": "geography4.pdf",
             "type": "pdf",
@@ -191,7 +191,7 @@
             "image": "volcanos.png"
         },
         {
-            "id": 10338,
+            "id": 10310,
             "title": "Islands",
             "name": "geography5.pdf",
             "type": "pdf",
@@ -199,6 +199,106 @@
             "date": "3 May 2011",
             "abstract": "An island or isle is any piece of sub-continental land that is surrounded by water.[2] Very small islands such as emergent land features on atolls can be called islets, skerries, cays or keys. An island in a river or a lake island may be called an eyot or ait, and a small island off the coast may be called a holm. A grouping of geographically or geologically related islands is called an archipelago, such as the Philippines.",
             "image": "islands.png"
+        },
+        {
+            "id": 10272,
+            "title": "Comparative Anatomy of the Larynx and Related Structures",
+            "name": "journal892343243.pdf",
+            "type": "pdf",
+            "author": "Sungmon Chun and Katherine J. Kamir",
+            "date": "27 Dec 2012",
+            "abstract": "The larynx is located within the anterior aspect of the neck, anterior to the inferior portion of the pharynx and superior to the trachea. Its primary function is to protect the lower airway by closing abruptly upon mechanical stimulation, thereby halting respiration and preventing the entry of foreign matter into the airway. ",
+            "image": "larynx.png"
+        },
+        {
+            "id": 10273,
+            "title": "Structure, function, and control of the human musculoskeletal network",
+            "name": "journal2002811.doc",
+            "type": "word",
+            "author": "Andrew C Murphy, David Baker",
+            "date": "21 April 2017",
+            "abstract": "We constructed a highly simplified whole-body musculoskeletal network in which single muscles connect to multiple bones via both origin and insertion points. We demonstrated that, using this simplified model, a muscle's role in this network could offer a theoretical prediction of the susceptibility of surrounding components to secondary injury.",
+            "image": "muscular.png"
+        },
+        {
+            "id": 10274,
+            "title": "The arteries of the human kidney",
+            "name": "journal4160172.pdf",
+            "type": "pdf",
+            "author": "H. Fine, E. N. Keen",
+            "date": "22 Dec 2017",
+            "abstract": "A study of the arrangement of the branches of the renal arteries, and the pelvis and calyces in African, European and Indian subjects has revealed a large variety of patterns.",
+            "image": "kidney.png"
+        },
+        {
+            "id": 10276,
+            "title": "Anterior Cervical Disectomy Fusion surgery versus Disc Replacement",
+            "name": "s49801716670.pdf",
+            "type": "pdf",
+            "author": "Si-Dong Yang, Yan-Bo Zhu",
+            "date": "5 July 2017",
+            "abstract": "Anterior cervical discectomy and fusion is a surgical procedure to treat nerve root or spinal cord compression by decompressing the spinal cord and nerve roots of the cervical spine with a discectomy in order to stabilize the corresponding vertebrae",
+            "image": "surgery.png"
+        },
+        {
+            "id": 10275,
+            "title": "Advances in Brain Tumor Surgery for Glioblastoma in Adults",
+            "name": "journal9837483.pdf",
+            "type": "pdf",
+            "author": "Alfredo Ramos, Gazanfar Rahmathulla",
+            "date": "19 Jan 2007",
+            "abstract": "The brain is an amazing three-pound organ that controls all functions of the body, interprets information from the outside world, and embodies the essence of the mind and soul. Intelligence, creativity, emotion, and memory are a few of the many things governed by the brain. Protected within the skull, the brain is composed of the cerebrum, cerebellum, and brainstem.",
+            "image": "brain.png"
+        },
+        {
+            "id": 10295,
+            "title": "The good behaviour game- Maintenance effects",
+            "name": "S0355161483.pdf",
+            "type": "pdf",
+            "author": "Donya Lynch, Mickey Keenan",
+            "date": "26 Feb, 2016",
+            "abstract": "This study examined the effects of the Good Behaviour Game on teacher and student behaviour in a general education classroom. Using a multiple baseline design across classes, baseline rates of disruptive behaviours were collected in each class and the class was divided into two teams",
+            "image": ""
+        },
+        {
+            "id": 10296,
+            "title": "What do teachers of students with autism spectrum disorder know",
+            "name": "S0803551637.pdf",
+            "type": "pdf",
+            "author": "Brian Fennell, Karola D.",
+            "date": "22 Jan 2016",
+            "abstract": "With rising numbers of school-aged children with autism educated in mainstream classrooms and applied behavior analysis (ABA) considered the basis of best practice, teachers’ knowledge in this field has become a key concern for inclusion.",
+            "image": ""
+        },
+        {
+            "id": 10297,
+            "title": "How to improve student learning in every classroom now",
+            "name": "S0883035516.pdf",
+            "type": "pdf",
+            "author": "Janet Twyman, William Heward",
+            "date": "27 May 2001",
+            "abstract": "This paper is our attempt to help any of the world’s 60 million teachers who ask, “What can I do right now to improve learning in my classroom?” We describe three easy-to-use teaching tactics derived from applied behavior analysis that consistently yield measurably superior learning outcomes.",
+            "image": ""
+        },
+        {
+            "id": 10298,
+            "title": "Writing on writing",
+            "name": "S0883433035.pdf",
+            "type": "pdf",
+            "author": "",
+            "date": "11 Jan 2004",
+            "abstract": "t is uncommon to find a behavior analytic or scientific analysis of creativity or of creative behaviors of people in the arts. This article looks at the use of direct instruction to teach writing to elementary through high school students.",
+            "image": ""
+        },
+        {
+            "id": 10299,
+            "title": "Multi-grade teaching practices in Austrian and Finnish primary schools",
+            "name": "S3551574234.pdf",
+            "type": "pdf",
+            "author": "Eeva Kaisa, Tina Hauser",
+            "date": "31 Oct 2015",
+            "abstract": "This article describes the teaching strategies used in multi-grade classes in five small rural primary schools in Austria and Finland on the basis of the content analysis of transcribed teacher interviews.",
+            "image": ""
         }
         
     ]
