--- a/src/data/knowledge.json
+++ b/src/data/knowledge.json
@@ -257,7 +257,7 @@
             "type": "pdf",
             "author": "Donya Lynch, Mickey Keenan",
             "date": "26 Feb, 2016",
-            "abstract": "This study examined the effects of the Good Behaviour Game on teacher and student behaviour in a general education classroom. Using a multiple baseline design across classes, baseline rates of disruptive behaviours were collected in each class and the class was divided into two teams",
+            "abstract": "This study examined the effects of the Good Behaviour Game on teacher and student behaviour in a general education classroom. Using a multiple baseline design across classes, baseline rates of disruptive behaviours were collected in each class and the class was divided into two teams. Each team then competed to obtain reinforcers for good behaviour. High baseline rates of disruptive behaviour were reduced significantly when the game was in first introduced. When it was introduced a second time the teachers were instructed to increase their positive comments. Surprisingly, there was little evidence of an increase in positive comments from the teachers. Findings are discussed in the context of the need for teacher training in behaviour analysis.",
             "image": ""
         },
         {
@@ -267,7 +267,7 @@
             "type": "pdf",
             "author": "Brian Fennell, Karola D.",
             "date": "22 Jan 2016",
-            "abstract": "With rising numbers of school-aged children with autism educated in mainstream classrooms and applied behavior analysis (ABA) considered the basis of best practice, teachers’ knowledge in this field has become a key concern for inclusion.",
+            "abstract": "With rising numbers of school-aged children with autism educated in mainstream classrooms and applied behavior analysis (ABA) considered the basis of best practice, teachers’ knowledge in this field has become a key concern for inclusion. Self-reported knowledge of ABA of special needs teachers (n = 165) was measured and compared to their actual knowledge of ABA demonstrated in accurate responses to a multiple-choice test. Findings reported here show that teachers’ self-perceived knowledge exceeded actual knowledge and that actual knowledge of ABA was not related to training received by government agency. Implications for teacher training are discussed.",
             "image": ""
         },
         {
@@ -277,7 +277,7 @@
             "type": "pdf",
             "author": "Janet Twyman, William Heward",
             "date": "27 May 2001",
-            "abstract": "This paper is our attempt to help any of the world’s 60 million teachers who ask, “What can I do right now to improve learning in my classroom?” We describe three easy-to-use teaching tactics derived from applied behavior analysis that consistently yield measurably superior learning outcomes.",
+            "abstract": "This paper is our attempt to help any of the world’s 60 million teachers who ask, “What can I do right now to improve learning in my classroom?” We describe three easy-to-use teaching tactics derived from applied behavior analysis that consistently yield measurably superior learning outcomes. Each tactic is applicable across curriculum content and students’ age and skill levels. Considerations for using digital tools to support and extend these “low-tech” tactics are also discussed.",
             "image": ""
         },
         {
@@ -287,7 +287,7 @@
             "type": "pdf",
             "author": "",
             "date": "11 Jan 2004",
-            "abstract": "t is uncommon to find a behavior analytic or scientific analysis of creativity or of creative behaviors of people in the arts. This article looks at the use of direct instruction to teach writing to elementary through high school students.",
+            "abstract": "It is uncommon to find a behavior analytic or scientific analysis of creativity or of creative behaviors of people in the arts. This article looks at the use of direct instruction to teach writing to elementary through high school students. It also includes analyses of the author’s writing behaviors across three years while writing works of creative nonfiction, behavior analysis articles, and poetry. The analyses include frequency, celeration, and variability of behavioral and environmental events. The project shows that the processes of writing (generating new ideas, thinking about writing) and the products (words written, edits made) can be analyzed behaviorally.",
             "image": ""
         },
         {
@@ -297,7 +297,7 @@
             "type": "pdf",
             "author": "Eeva Kaisa, Tina Hauser",
             "date": "31 Oct 2015",
-            "abstract": "This article describes the teaching strategies used in multi-grade classes in five small rural primary schools in Austria and Finland on the basis of the content analysis of transcribed teacher interviews.",
+            "abstract": "This article describes the teaching strategies used in multi-grade classes in five small rural primary schools in Austria and Finland on the basis of the content analysis of transcribed teacher interviews. Two main types of strategies were identified: practices that (1) aim to reduce or (2) capitalize on students’ heterogeneity. The results illustrate how differently multi-grade teaching can be realized and how it can effectively support individual student learning. The findings are discussed with regard to teacher education with the intention of increasing the awareness of the professional skills required in high-quality teaching practices in multi-grade teaching.",
             "image": ""
         }
         
